--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: python
-rvm:
-- "3.6.6"
+python:
+  - 3.7
 install: "pip install -r requirements.txt"
 script:
-- SECRET_KEY="ultra_super_secret_key" ./manage.py test
-
-os: win
+- SECRET_KEY="secretkey"  python ./manage.py test
