--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: python
 python:
-  - "3.6"
-install: "pip install -r requirements.txt"
-script:
+    - "stable"
+# command to install dependencies
+install:
+  - pip install -r requirements.txt
+  - pip install .script:
 - SECRET_KEY="secretkey"  python ./manage.py test
 virtualenv:
   system_site_packages: true
+services:
+    - mysql
