--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,32 @@
 autopep8==1.4.4
+bcrypt==3.1.7
 boto==2.49.0
 boto3==1.9.211
 botocore==1.12.211
 certifi==2019.9.11
+cffi==1.12.3
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==1.11.23
 django-bootstrap4==0.0.8
+django-countries==5.5
 -e git://github.com/maraujop/django-crispy-forms.git@dec71c73d5234a42dc74b7f90c26535d3a2b2875#egg=django_crispy_forms
 django-forms-bootstrap==3.1.0
 django-storages==1.7.1
 docutils==0.15.2
+env==0.1.0
 gunicorn==19.9.0
 idna==2.8
 jmespath==0.9.4
 Pillow==6.1.0
+psycopg2==2.8.3
 psycopg2-binary==2.8.3
 pycodestyle==2.5.0
+pycparser==2.19
 python-dateutil==2.8.0
 pytz==2019.2
 requests==2.22.0
 s3transfer==0.2.1
 six==1.12.0
-stripe==2.36.2
+stripe==2.37.1
 urllib3==1.25.6
