--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: python
 python:
-    - "stable"
-# command to install dependencies
-install:
-  - pip install -r requirements.txt
-  - pip install .script:
-- SECRET_KEY="secretkey"  python ./manage.py test
-services:
-    - mysql
+- "3.6"
+install: "pip install -r requirements.txt"
+script:
+- SECRET_KEY="whatever" ./manage.py test
